create speciality doc
